# dydx-trade-analyzer

./: pyproject.toml
dydx_trade_analyzer/: main.py
