[tool.poetry]
name = "dydx-trade-analyzer"
version = "0.1.0"
description = ""
authors = ["mopeneko <mopeneko@lem0n.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
pytz = "^2023.3.post1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
